--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node app"
   },
+  "engines": {
+    "node": "0.9.x",
+    "npm": "1.1.x"
+  },
   "dependencies": {
     "express": "3.0.6",
     "jade": "*",
