--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "npm": "1.1.x"
   },
   "dependencies": {
-    "jade": "*",
+    "express": "~3.0.6",
+    "oauth": "~0.9.8",
+    "jade": "~0.28.1"
   }
 }
