--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "~3.0.6",
     "oauth": "~0.9.8",
-    "jade": "~0.28.1"
+    "jade": "~0.28.1",
+    "async": "~0.1.22"
   }
 }
